Fix -UseCCP and add regression test